# dongshan-cli

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  README.zh-CN.md
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
packaging/windows/: dongshan.iss
scripts/: build-installer.ps1  build-linux-package.sh
src/: chat.rs  chat_context.rs  cli.rs  config.rs  diagnostics.rs  fs_tools.rs  llm.rs  main.rs  prompt_store.rs  skills.rs  updater.rs  util.rs  webui.rs
src/commands/: config_cmd.rs  doctor_cmd.rs  edit_cmd.rs  files_cmd.rs  fs_cmd.rs  mod.rs  model_cmd.rs  models_cmd.rs  onboard_cmd.rs  placeholder_cmd.rs  prompt_cmd.rs  review_cmd.rs  skill_cmd.rs  skills_cmd.rs
src/entrypoints/: agent.rs  chat.rs  mod.rs  tui.rs
src/query/: engine.rs  history.rs  input.rs  mod.rs  turn_runner.rs  verification.rs
src/services/: diagnostics.rs  files.rs  mod.rs  models.rs  prompts.rs  sessions.rs  settings.rs  skills.rs  web.rs
src/state/: runtime.rs
src/tools/: config.rs  file_edit.rs  file_read.rs  file_write.rs  glob.rs  grep.rs  mod.rs  model.rs  prompt.rs  registry.rs  shell.rs  skills.rs  spec.rs
web/: app.css  app.js  index.html
