[package]
name = "dongshan"
version = "0.2.1"
edition = "2024"

[dependencies]
anyhow = "1.0"
axum = "0.8"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28"
dirs = "6.0"
ratatui = "0.29"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
encoding_rs = "0.8"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread"] }
toml = "0.9"

